# frdm-server

./: .gitignore  .~lock.bandwidth.ods#  Cargo.toml  README.md  bandwidth.ods  build.rs  config.yaml  persist.json  test-rope-speed.ods
design/algorithm/: part00_title.md  part01_index.md  part02_overview.md  part03_fast_scan.md  part04_fine_scan.md  part05_algo.md  part05_defect_detection.md  part06_geometry.md  template.html
design/theory/: geometry_rope_defects.md
src/: complex_test.rs  lib.rs  main.rs
src/algorithm/: initial_points.rs  mod.rs
src/algorithm/auto_correction/: auto_brightness_and_contrast.rs  auto_brightness_and_contrast_ctx.rs  auto_gamma.rs  auto_gamma_ctx.rs  mod.rs
src/algorithm/context/: context.rs  context_access.rs  initial.rs  mod.rs  result_ctx.rs
src/algorithm/cropping/: cropping.rs  cropping_conf.rs  cropping_ctx.rs  mod.rs
src/algorithm/detecting_contours/: detecting_contours.rs  detecting_contours_ctx.rs  mod.rs
src/algorithm/detecting_contours_cv/: detecting_contours_cv.rs  detecting_contours_cv_ctx.rs  mod.rs
src/algorithm/expansion_contraction/: mad.rs  mod.rs  z_score.rs
src/algorithm/fast_scan/: edge_detection.rs  edge_detection_ctx.rs  mod.rs
src/algorithm/gaussian_blur/: gaussian_blur.rs  gaussian_blur_ctx.rs  mod.rs
src/algorithm/geometry_defect/: contraciton.rs  expansion.rs  geometry_defect.rs  geometry_defect_ctx.rs  geometry_defect_type.rs  groove.rs  mod.rs  mound.rs  threshold.rs
src/algorithm/geometry_defect/contraction/: contraction.rs  contraction_ctx.rs  mod.rs
src/algorithm/geometry_defect/expansion/: expansion.rs  expansion_ctx.rs  mod.rs
src/algorithm/geometry_defect/groove/: groove.rs  groove_ctx.rs  mod.rs
src/algorithm/geometry_defect/mound/: mod.rs  mound.rs  mound_ctx.rs
src/algorithm/graham/: find_start.rs  graham.rs  graham_ctx.rs  mod.rs  sort.rs
src/algorithm/graham/entities/: point.rs
src/algorithm/graham_scan/: graham_scan.rs  graham_scan_ctx.rs  mod.rs
src/algorithm/gray/: gray.rs  gray_ctx.rs  mod.rs
src/algorithm/initial_ctx/: initial_ctx.rs  mod.rs
src/algorithm/mad/: bond.rs  mad.rs  mad_ctx.rs  mod.rs
src/algorithm/outliners_in_sample/: bond.rs  mad.rs  mod.rs  z_score.rs
src/algorithm/perimeter/: mod.rs  perimeter.rs  perimeter_ctx.rs
src/algorithm/perimeter/entities/: point.rs
src/algorithm/rope_dimetsions/: mod.rs  rope_dimensions.rs  rope_dimensions_conf.rs  rope_dimensions_ctx.rs
src/algorithm/temporal_filter/: filter_high_pass.rs  mod.rs  temporal_filter.rs  temporal_filter_conf.rs
src/algorithm/width_emissions/: mod.rs  width_dot.rs  width_emissions.rs  width_emissions_ctx.rs
src/conf/: conf.rs  conf_duration.rs  conf_keywd.rs  fast_scan.rs  fast_scan_conf.rs  fine_scan.rs  fine_scan_conf.rs  mod.rs  service_config.rs
src/conf/detecting_contouts/: brightness_contrast.rs  contours_conf.rs  detecting_contours_conf.rs  edge_detection_conf.rs  gamma.rs  gamma_conf.rs  gausian_conf.rs  mod.rs  overlay_conf.rs  sobel_conf.rs
src/domain/: dot.rs  image.rs  mod.rs
src/domain/dbg/: dbgid.rs  mod.rs
src/domain/eval/: eval.rs  mod.rs
src/domain/filter/: filter.rs  filter_lowpass.rs  filter_smooth.rs  filter_smooth_2.rs  mod.rs
src/domain/graham/: build_hull.rs  dot.rs  find_start.rs  mod.rs  sort.rs
src/domain/types/: channel.rs  mod.rs
src/infrostructure/: camera.rs  mod.rs
src/infrostructure/arena/: ac_access_mode.rs  ac_buffer.rs  ac_device.rs  ac_device_conf.rs  ac_err.rs  ac_image.rs  ac_node.rs  ac_node_map.rs  ac_system.rs  bindings.rs  channel_packet_size.rs  exposure.rs  ffi_str.rs  frame_rate.rs  image.rs  install.sh  mod.rs  pixel_format.rs  readme.md  scan-ethernet.sh  wrappers.h
src/infrostructure/arena/ArenaSDK_Linux_x64/: install.sh
src/infrostructure/arena/ArenaSDK_Linux_x64/lib64/: libarenac.so.0
src/infrostructure/arena/Cpp_Acquisition_TCP/: Cpp_Acquisition_TCP.cpp
src/infrostructure/camera/: camera.rs  camera_conf.rs  camera_resolution.rs  mod.rs  pimage.rs
src/scan/: edge_detection.rs  edge_detection_ctx.rs  fast.rs  mod.rs
src/test/: mod.rs
src/test/adjusting/: adjusting.rs  mod.rs
src/test/adjusting/plot/: ui_app.rs
src/test/complex/: geometry_defect_complex_test.rs  mod.rs
src/test/unit/: mod.rs  template_test.rs
src/test/unit/algorithm/: contraction_test.rs  expansion_test.rs  geometry_defect_test.rs  groove_test.rs  mad_test.rs  mod.rs  mound_test.rs  width_emissions_test.rs  z_score_test.rs
src/test/unit/domain/: mod.rs
src/test/unit/scan/: mod.rs
(+253 files in other folders)
