[package]
name = "frdm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "^0.4"
#
#
env_logger = "^0.11"
#
#
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.2.0" }
# api-tools = { path = "../api-tools/" }
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.0.3" }
#
# Collections
indexmap = "^2.7"
linked-hash-map = "^0.5"
hashers = "^1.0"
#
# Serde
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
#
#
regex = "^1.10"
#
#
strum = "^0.26"
strum_macros = "^0.26"

