[package]
name = "frdm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "^0.4"
#
#
env_logger = "^0.11"
#
#
# sal-core = { path = "../sal-core/" }
sal-core = { git = "https://github.com/a-givertzman/rust-sal-core.git", tag = "0.0.2" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.2.0" }
# api-tools = { path = "../api-tools/" }
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.0.3" }
#
# Collections
indexmap = "^2.8"
linked-hash-map = "^0.5"
hashers = "^1.0"
#
# Serde
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
#
#
regex = "^1.10"
#
#
strum = "^0.27"
strum_macros = "^0.27"
#
#
# OpenCV
opencv = "^0.94"
#
#
# [build-dependencies]
# cc = "^1.1"
#
# Arena camera SDK
# lucid-arena-sys = "0.1"
# lucid-arena-sys = { path = "../lucid-arena-sys" }

# [profile.dev]
# rpath = true

libc = "^0.2"