[package]
name = "frdm-tools"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[dependencies]
log = { version = "~0.4", git = "https://github.com/rust-lang/log" }
env_logger = { version = "~0.11", git = "https://github.com/rust-cli/env_logger" }
#
#
sal-core = { tag = "0.1.0", git = "https://github.com/a-givertzman/rust-sal-core.git" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { tag = "0.1.2", git = "https://github.com/a-givertzman/rust-testing.git" }
debugging = { tag = "0.0.1", git = "https://github.com/a-givertzman/rust-debuging.git" }
api-tools = { tag = "0.2.1", git = "https://github.com/a-givertzman/rust-api-tools.git" }
# api-tools = { path = "../api-tools/" }
sal-sync = { tag = "0.3.0", git = "https://github.com/a-givertzman/rust-sal-sync.git" }
#
# Collections
indexmap = { version = "~2.10", git = "https://github.com/indexmap-rs/indexmap" }
linked-hash-map = { version = "~0.5", git = "https://github.com/contain-rs/linked-hash-map" }
hashers = { version = "~1.0", git = "https://github.com/tmmcguire/hashers" }
#
# Serde
serde = { version = "~1.0", features = ["derive"] }         # , git = "https://github.com/serde-rs/serde"
serde_yaml = { version = "~0.9" }                           # , git = "https://github.com/dtolnay/serde-yaml"
serde_json = { version = "~1.0" }                           # , git = "https://github.com/serde-rs/json"
#
#
regex = { version = "~1.11", git = "https://github.com/rust-lang/regex" }
#
#
strum = { version = "~0.27", git = "https://github.com/Peternator7/strum" }
strum_macros = { version = "~0.27", git = "https://github.com/Peternator7/strum" }
#
#
# OpenCV
opencv = { version = "~0.95", features = ["clang-runtime"], git = "https://github.com/twistedfall/opencv-rust" }
#
#
# Photon image processing
photon-rs = { version = "0.3.2", default-features = false, git = "https://github.com/silvia-odwyer/photon", rev = "3b72d357848cd76be9363e87ad0cd02a19b988d2" }
#
#
# Image
#
#
# [build-dependencies]
# cc = "^1.1"
#
# libc = { version = "1.0.0-alpha.1", git = "https://github.com/rust-lang/libc.git" }
libc = "~0.2"          # , git = "https://github.com/rust-lang/libc.git"
#
# Sync
kanal = { version = "~0.1", git = "https://github.com/fereidani/kanal.git" }
parking_lot = { version = "~0.12", git = "https://github.com/Amanieu/parking_lot.git" }
